# python-mentoring-2022

./: Dockerfile-contacts-api  README.md  docker-compose-contacts-api.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml
db/: contacts.db
hometasks/algorithms/: easy.py  hard.py  medium.py
hometasks/announcements_api/: README.md  initialize_db_tables.py  main.py  wsgi.py
hometasks/announcements_api/core/: config.py  db.py  decorators.py  depends.py  entities.py  exceptions.py  repositories.py  utils.py
hometasks/contacts_api/: README.md  initialize_db_tables.py  main.py
hometasks/contacts_api/core/: db.py  decorators.py  depends.py  entities.py  repositories.py  responses.py  utils.py
hometasks/text_analyser/: Initialize_database.py  consts.py  database.py  entities.py  main.py  main_example.py  text_analyser.py  utils.py
hometasks/text_analyser/tests/: conftest.py  test_text_analyser.py
part_1/hometask/: entities.py  main.py  main_example.py  sample_text.txt  task.txt  text_analyser.py  utils.py
terraform/: main.tf
