[tool.poetry]
name = "python-mentoring-2022"
version = "0.1.0"
description = ""
authors = ["dmytropopoilyk <dmytro_popoilyk@epam.com>"]

[tool.poetry.dependencies]
python = "^3.10"
anyio = "^3.6.1"
asyncpg = "^0.26.0"
certifi = "^2022.9.24"
charset-normalizer = "^2.1.1"
click = "^8.1.3"
fastapi = "^0.85.0"
greenlet = "^1.1.3"
h11 = "^0.14.0"
idna = "^3.4"
pydantic = "^1.10.2"
requests = "^2.28.1"
sniffio = "^1.3.0"
SQLAlchemy = "^1.4.41"
sqlalchemy2-stubs = "^0.0.2a27"
sqlmodel = "^0.0.8"
typing-extensions = "^4.3.0"
urllib3 = "^1.26.12"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
